crates/cli/tests/snapshots/single_use_let__fix_16fcae00b3728ffdca705d62df3389d525317f444834c8139f7d187fbe2e4a99.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  loop = loop;\\nin\\n  1\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,2 @@
-let
-  loop = loop;
-in
-  1
+1
