crates/cli/tests/snapshots/single_use_let__fix_4ae352d4982a1a405b95a1e349025134b6cf22be9b004609202e0d31ef65fa52.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  base = pkgs.hello;\\n  wrapped = base.override { };\\nin\\n  wrapped\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,2 @@
-let
-  base = pkgs.hello;
-  wrapped = base.override { };
-in
-  wrapped
+(pkgs.hello.override { })
