crates/cli/tests/snapshots/single_use_let__fix_54c4d170d8a4e6fa8380f6ba6079efaf4ec746bcfdf8f30fe392cd9d534c82c7.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  x = someExpr;\\nin\\n  \\\"value: ${x}\\\"\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,2 @@
-let
-  x = someExpr;
-in
-  "value: ${x}"
+"value: ${someExpr}"
