crates/cli/tests/snapshots/single_use_let__fix_a022d9e9c0dbcc1d8b0783e7e5892a1ab7ee38502d452574d74b2e8101c414ce.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  gpuArgs =\\n    optionals (disableFeatures != []) [\\n      \\\"--disable-features=${concatStringsSep \\\",\\\" disableFeatures}\\\"\\n    ]\\n    ++ optionals (!smoothScroll) [\\n      \\\"--disable-smooth-scrolling\\\"\\n    ];\\nin\\n  concatStringsSep \\\" \\\" (gpuArgs ++ extraArgs)\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,11 +1,7 @@
-let
-  gpuArgs =
-    optionals (disableFeatures != []) [
+concatStringsSep " " ((optionals (disableFeatures != []) [
       "--disable-features=${concatStringsSep "," disableFeatures}"
     ]
     ++ optionals (!smoothScroll) [
       "--disable-smooth-scrolling"
-    ];
-in
-  concatStringsSep " " (gpuArgs ++ extraArgs)
+    ]) ++ extraArgs)
