crates/cli/tests/snapshots/single_use_let__fix_a73466e782cef2cb9b24807142e9e7883dddfc3f0dfb18395c443ca004a74cd6.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  x = 1;\\nin\\n  { inherit x y; }\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,2 @@
-let
-  x = 1;
-in
-  { inherit x y; }
+{ x = 1; inherit y; }
