crates/cli/tests/snapshots/single_use_let__fix_d1104ffd718faaaf60d543009adacd30237e507487b5c81f59d4f870c4d9af83.snap
---
source: crates/cli/tests/single_use_let.rs
assertion_line: 7
expression: "\"let\\n  data = { version = 5; pins = {}; };\\n  inherit (data) version;\\nin\\n  if version == 5 then data.pins else {}\\n\""
---
