crates/cli/tests/snapshots/single_use_let__fix_debab6b8508d37c6042b6a1a4f8fe9879e267d993159dfe58798a11b50447ebd.snap
---
source: crates/cli/tests/single_use_let.rs
expression: "\"let\\n  settings =\\n    {\\n      a = 1;\\n      b = 2;\\n    };\\nin\\n  { inherit settings; }\\n\""
---

